# ElectricCircuitSim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  electriccircuitsim.pyi  pyproject.toml  setup.py  test.py
.github/workflows/: cicd.yml  tests.yml
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/: square_wave_generator.h
cpp/src/: sinusoidal_generator.cpp
docs/: Doxyfile
docs/source/: analyze.rst  conf.py  core.rst  examples.rst  getting_started.rst  index.rst  mathematical_explanation.rst  requirements.txt
docs/source/xml/: circuit_8h.xml  circuit__rl_8cpp.xml  circuit__rl_8h.xml  classCircuitRL.xml  classICircuit.xml  classIGenerator.xml  classSinusoidalGenerator.xml  classSquareWaveGenerator.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d7cdddb7a4322ae7e54b11927b5877ad.xml  dir_dfdbda394c3f7a3aa55229f33a559c41.xml  dir_e6fb451ec9c24a28c75d00abc51f4b3c.xml  generator_8h.xml  index.xml  pybind__module_8cpp.xml  sinusoidal__generator_8cpp.xml  sinusoidal__generator_8h.xml  square__wave__generator_8cpp.xml  square__wave__generator_8h.xml
examples/: example1.py  example2.py
github/workflows/: build.yml  tests.yml
src/circuit_simulator/: __init__.py
src/circuit_simulator/analyze/: analyzer.py  analyzer.pyi
src/circuit_simulator/core/: _electric_sim.pyi
src/cpp/include/: circuit.h  circuit_rl.h  generator.h  sinusoidal_generator.h  square_wave_generator.h
src/cpp/src/: circuit_rl.cpp  pybind_module.cpp  sinusoidal_generator.cpp  square_wave_generator.cpp
src/electric_simulation/: __init__.py
src/electric_simulation/core/: __init__.py  _electric_sim.pyi
src/electriccircuitsim/: __init__.py
src/include/: circuit.h
src/src/: pybind_module.cpp  square_wave_generator.cpp
tests/: test_electric_sim.cpp
tests/unit/analyzer/: test_analyzer.py
tests/unit/core/: test_electric_sim.py
