[project]
name = "circuit_simulator"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maciej Krakowiak", email = "maciej.krakowiak17@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
]
license = { text = "MIT" }

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"
