[project]
name = "circuit_simulator"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maciej Krakowiak", email = "maciej.krakowiak17@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
]
license = { text = "MIT" }

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
docs = [
    "breathe>=4.35.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
